Bug 181558 - Cannot sync from a subfolder of a resource
Summary: Cannot sync from a subfolder of a resource
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: KResource compat bridges (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: groot
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-22 03:27 UTC by Robert Marmorstein
Modified: 2009-07-23 14:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Resources in Akonadi Console (57.64 KB, image/png)
2009-01-22 03:28 UTC, Robert Marmorstein
Details
Kpilot Configuration Dialog (135.45 KB, image/png)
2009-01-22 03:28 UTC, Robert Marmorstein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Marmorstein 2009-01-22 03:27:18 UTC
Version:           Latest KDE 4.2 branch (using Devel)
Compiler:          gcc-4.3.2 
OS:                Linux
Installed from:    Compiled sources

When configuring kpilot it is only possible to select top-level akonadi resources for the calendar, addressbook, and todo conduits.  If you have a resource which contains sub-folders it is not possible to sync the information in those subfolders, because they are ignored.

This happens for me because I store my datebook information in two calendars on a Kolab server.  They are available through akonadi as subfolders (My Calendar and shared/shared) of a resource named "Calendar".  When I sync, information from the palm is stored in the top level "Calendar" folder -- not in "MyCalendar" or "shared/shared" where Kolab stores them.  Information in those two folders is ignored.  I will atttach some screenshots to make this easier to follow....
Comment 1 Robert Marmorstein 2009-01-22 03:28:01 UTC
Created attachment 30502 [details]
Resources in Akonadi Console
Comment 2 Robert Marmorstein 2009-01-22 03:28:27 UTC
Created attachment 30503 [details]
Kpilot Configuration Dialog
Comment 3 Bertjan Broeksema 2009-01-22 09:56:02 UTC
Hey Robert, thanks for reporting. I'll look into this as soon as I have time.
Comment 4 Bertjan Broeksema 2009-01-23 23:30:23 UTC
Reassigning to Akonadi. According to Volker Krause this problem is related to the Kolab resource bridge.
Comment 5 Robert Marmorstein 2009-01-24 00:46:46 UTC
I've created an account on my Kolab server that you guys can use for testing if you like.  You can connect using standard IMAP (SSL security works, too).  Use the username "akonaditest" and the password "akonadirocks".
Comment 6 Robert Marmorstein 2009-01-24 04:52:23 UTC
Oh.  And the server name is "narnia.homeunix.com".
Comment 7 Jason 'vanRijn' Kasper 2009-01-24 06:10:27 UTC
AWESOME! Thanks Robert!! =:)
Comment 8 Robert Marmorstein 2009-07-16 04:37:34 UTC
Okay.  I've got a patch for this behavior now!  I've submitted it to the reviewboard as http://reviewboard.kde.org/r/1039/
Comment 9 Bertjan Broeksema 2009-07-20 16:34:58 UTC
SVN commit 999883 by bbroeksema:

Replace the combobox widget with a treeview in the settings pages of akonadi
based conduits.

Thanks Robert Marmorstein for providing this patch!

BUG: 181558


 M  +0 -1      CMakeLists.txt  
 M  +14 -6     akonadisetupwidget.cc  
 M  +1 -0      akonadisetupwidget.h  
 D             collectioncombobox.cc  
 D             collectioncombobox.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=999883
Comment 10 Allen Winter 2009-07-23 14:51:59 UTC
SVN commit 1001492 by winterz:

Backport r999883 by bbroeksema from trunk to the 4.3 branch:

Replace the combobox widget with a treeview in the settings pages of akonadi
based conduits.

Thanks Robert Marmorstein for providing this patch!

CCBUG: 181558



 M  +0 -1      CMakeLists.txt  
 M  +14 -6     akonadisetupwidget.cc  
 M  +1 -0      akonadisetupwidget.h  
 D             collectioncombobox.cc  
 D             collectioncombobox.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1001492