Replace the combobox widget with a treeview in the settings pages of akonadi based conduits.

Thanks Robert Marmorstein for providing this patch!

BUG: 181558

svn path=/trunk/KDE/kdepim/; revision=999883